pkg/clusteragent/appsec/envoygateway/testdata/sidecar-uds/01-gatewayclass.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eg-appsec-demo
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg-appsec-demo
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: datadog-appsec-sidecar-uds
    namespace: envoy-gateway-system
