pkg/clusteragent/appsec/envoygateway/testdata/sidecar-uds/03-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: appsec-gateway
  namespace: eg-appsec-demo
spec:
  gatewayClassName: eg-appsec-demo
  listeners:
    - name: http
      protocol: HTTP
      port: 80
