pkg/clusteragent/appsec/envoygateway/testdata/sidecar-uds/06-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-backend
  namespace: eg-appsec-demo
spec:
  parentRefs:
    - name: appsec-gateway
  rules:
    - backendRefs:
        - name: sample-backend
          port: 80
