pkg/clusteragent/appsec/envoygateway/testdata/sidecar-uds/07-sample-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-backend
  namespace: eg-appsec-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-backend
  template:
    metadata:
      labels:
        app: sample-backend
    spec:
      containers:
        - name: backend
          image: registry.k8s.io/e2e-test-images/agnhost:2.45
          args:
            - netexec
            - --http-port=8080
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sample-backend
  namespace: eg-appsec-demo
spec:
  selector:
    app: sample-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
